[package]
name = "dayone-export"
version = "0.5.2"
edition = "2021"
authors = ["Joshua Coles <me@joshuacoles.me>"]
license = "MIT OR Apache-2.0"

[dependencies]
futures = "0.3"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.12"

clap = { version = "4", features = ["derive"] }
itertools = "0.13"
anyhow = "1.0"
obsidian-rust-interface = { git = "https://github.com/joshuacoles/Obsidian-Rust-Interface", version = "*" }
